Removed QSF parser from main implementation. Implemented a new lexer & parser that allows custom pin assignments via config file (assets/assignments.cfg) Custom PIN set implemented (customizable via assets/board.cfg) Code cleanup

--- a/vhdl_vpi/Makefile
+++ b/vhdl_vpi/Makefile
@@ -5,12 +5,15 @@ BUILD   = build
 
 SRC += src/main.cpp
 SRC += src/vpi.cpp
-SRC += src/qsf_parser.cpp
 SRC += src/virtual_board.cpp
 SRC += src/board_config.cpp
 SRC += src/utils.cpp
 
-CFLAGS  += -Isrc -O2 -std=c++2a -fPIC -W -Wall -Wno-write-strings -Wno-missing-field-initializers 
+SRC += src/assignments_cfg/lexer.cpp
+SRC += src/assignments_cfg/parser.cpp
+
+
+CFLAGS  += -Isrc -O2 -std=c++2a -fPIC -W -Wall -Wno-write-strings -Wno-missing-field-initializers -Wno-format
 LDFLAGS += -lm -lconfig++
 GHDL     = ghdl
 CXX      = g++
