--- a/vhdl_vpi/Makefile
+++ b/vhdl_vpi/Makefile
@@ -1,40 +1,36 @@
-TARGET  = virtual_board.vpi
-VHDL_FILES = assets/app.vhdl # all vhdl files to analyze
-EXEC_TOP_UNIT = up_counter # top entity name
+VHDL_FILES = assets/app.vhdl 	# all vhdl files to analyze
+EXEC_TOP_UNIT = up_counter 		# top entity name
+
+SRC		= $(shell find ./src/ -name "*.cpp")
+INCLUDE = src
+LIB		= 
 BUILD   = build
+TARGET  = virtual_board.vpi
 
-SRC += src/main.cpp
-SRC += src/vpi.cpp
-SRC += src/virtual_board.cpp
-SRC += src/board_config.cpp
-SRC += src/utils.cpp
-
-SRC += src/assignments_cfg/lexer.cpp
-SRC += src/assignments_cfg/parser.cpp
-
-
-CFLAGS  += -Isrc -O2 -std=c++2a -fPIC -W -Wall -Wno-write-strings -Wno-missing-field-initializers -Wno-format
-LDFLAGS += -lm -lconfig++
-GHDL     = ghdl
 CXX      = g++
+CXXFLAGS = -W -Wall -Wextra -O2 -std=c++2a -fPIC -pthread
+CXXFLAGS += -Wno-write-strings -Wno-missing-field-initializers -Wno-format
+LIBRARIES  = -lm -lconfig++
+
+# TODO: better way of doin this
+INCLUDEFLAG = -I$(INCLUDE) -I$(INCLUDE)/assignments_cfg
+
+GHDL     = ghdl
 GHDLLD   = $(GHDL) --vpi-link $(CXX)
 
 all: $(BUILD)/$(TARGET)
 
 # TODO: recompile if headers are changed
 $(BUILD)/$(TARGET): $(SRC)
-	$(GHDLLD) $(CFLAGS) $^ -o $@ $(LDFLAGS)
+	$(GHDLLD) $(CXXFLAGS) $(INCLUDEFLAG) $^ -o $@ $(LIBRARIES)
 
 exec: $(BUILD)/$(TARGET)
-	$(GHDL) -a -fsynopsys $(VHDL_FILES)
+	$(GHDL) -a -fsynopsys $(VHDL_FILES)	
 	$(GHDL) -e -fsynopsys $(EXEC_TOP_UNIT)
 	$(GHDL) -r -fsynopsys $(EXEC_TOP_UNIT) --vpi=./$(BUILD)/$(TARGET)
 
 clean:
-	@rm -rvf $(BUILD)
+	@rm $(BIN)/*
 	@rm -vf work-*.cf
 	@rm -vf *.o
-	@rm -vf test
-	@rm -vf *.vcd
-	@rm -vf trace.txt
 
