--- a/vhdl_vpi/assets/assignments.cfg
+++ b/vhdl_vpi/assets/assignments.cfg
@@ -2,5 +2,6 @@
 # Make sure the SIGNAL_DESTINATION is correctly typed and the PIN_ID is valid
 # PIN_ID -> SIGNAL_DESTINATION
 
-PIN_A8 -> clk
-PIN_A9 -> COUT
+PIN_A7 -> clk
+PIN_A8 -> enable
+PIN_A9 -> cout[0]
