Added pre-compiled headers for boost (mostly) Separated `pin` and `pin_set` Fixed circular dependency bug Added `pin::set_value` function (needs testing/fix) Fixed server's PUT message handlin

--- a/vhdl_vpi/Makefile
+++ b/vhdl_vpi/Makefile
@@ -20,6 +20,9 @@ GHDLLD   = $(GHDL) --vpi-link $(CXX)
 
 all: $(BUILD)/$(TARGET)
 
+pch: src/pch.h
+	$(CXX) -x c++-header -o src/pch.h.gch -c src/pch.h
+
 # TODO: recompile if headers are changed
 $(BUILD)/$(TARGET): $(SRC)
 	$(GHDLLD) $(CXXFLAGS) $(INCLUDEFLAG) $^ -o $@ $(LIBRARIES)
