--- a/vhdl_vpi/Makefile
+++ b/vhdl_vpi/Makefile
@@ -20,8 +20,8 @@ GHDLLD   = $(GHDL) --vpi-link $(CXX)
 
 all: $(BUILD)/$(TARGET)
 
-pch: src/pch.h
-	$(CXX) -x c++-header -o src/pch.h.gch -c src/pch.h
+pch: src/pch.hpp
+	$(CXX) src/pch.hpp
 
 # TODO: recompile if headers are changed
 $(BUILD)/$(TARGET): $(SRC)
