added `board_event` struct to store websocket events (pin value changes) fixed `get_pin_net` removed `pin::set_value` and now using `vpi::set_net_val` fixed some code/documentation

--- a/vhdl_vpi/assets/board.cfg
+++ b/vhdl_vpi/assets/board.cfg
@@ -21,6 +21,11 @@ board =
             pin_name = "LEDR2";
             pin_id = "PIN_A9";
             pin_index = 2;
+        },
+        {
+            pin_name = "LEDR3";
+            pin_id = "PIN_A10";
+            pin_index = 2;
         }
     );
 
